--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,6 @@
 {
 	"name": "deeboo · Default Bookmark Folder",
+	"description": "Chrome Bookmark Manager Extension",
 	"version": "1.0.0",
 	"permissions": ["bookmarks", "tabs", "storage"],
 	"manifest_version": 3,
